--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
